--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,8 @@ Error message and password prompt
 
 <li>קנלוני</li>
 
+<li>קפה</li>
+
 <li>קפה וממתקים</li>
 
 <li>קפה מילר</li>
@@ -9107,10 +9109,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190314150012808" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20190408152821476" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20190408113719843" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190408165211001" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9119,7 +9121,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הבריסטות שכאן]] [[טבע עירוני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לחמים [[מאנטה ריי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9139,7 +9141,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190402110903255" title="$:/temp/search">
+<div created="20161023184814872" modified="20190409114118574" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10425,7 +10427,7 @@ well,
 
 </pre>
 </div>
-<div created="20170618162529875" modified="20170706174527753" tags="[[המטבח על פי ז'נבייב]]" title="בבוקר">
+<div created="20170618162529875" modified="20190408153034088" tags="[[המטבח על פי ז'נבייב]] קפה" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10618,7 +10620,7 @@ Is where I want to be
 
 אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.</pre>
 </div>
-<div created="20190227173320579" modified="20190305121845753" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]]" title="בתה וגריגה">
+<div created="20190227173320579" modified="20190408153106570" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה" title="בתה וגריגה">
 <pre>[img[pictures/beta-ve-grega.jpg]]
 
 !!![[תומר]]: 
@@ -11495,7 +11497,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180715194223602" modified="20190314145737104" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה" title="גרציאני">
+<div created="20180715194223602" modified="20190408153156080" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
@@ -11617,7 +11619,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20181031153935874" modified="20181102203036830" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות" title="דליקטסן">
+<div created="20181031153935874" modified="20190408153218970" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
@@ -11625,7 +11627,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 [[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].</pre>
 </div>
-<div created="20171018115658510" modified="20181018173428468" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות" title="דליקטסן אצל ז'נבייב">
+<div created="20171018115658510" modified="20190408153237005" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11836,7 +11838,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].</pre>
 </div>
-<div created="20190324091820505" modified="20190408120917561" tags="[[כאן בגטו]] [[חיות אוכל]]" title="הבריסטות שכאן">
+<div created="20190324091820505" modified="20190408153305263" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
 
 !!![[תומר]]:
@@ -11847,7 +11849,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20161217141221233" modified="20170507181732133" tags="HH" title="הברמנית">
+<div created="20161217141221233" modified="20190408153335083" tags="HH קפה" title="הברמנית">
 <pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
 
 גורה - הצעירה בבנות, היא ברמנית שמג'אנגלת מלים ומשקאות, לרוב מצליחה לא לעורר התנגדויות למרות שבהתחלה טועים לחשוב שהיא אנטיפטית/ עצבנית/סנובית. יש לה זכרון פנומנלי. 
@@ -12331,7 +12333,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170705183317472" modified="20190321092211524" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]]" title="הספלים מהם אנו שותים">
+<div created="20170705183317472" modified="20190408153429273" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה" title="הספלים מהם אנו שותים">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12398,7 +12400,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181107090226210" modified="20181107093930730" tags="[[כאן בגטו]] [[חיות אוכל]]" title="הקיוסק של גילי">
+<div created="20181107090226210" modified="20190408153459149" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="הקיוסק של גילי">
 <pre>[img[pictures/gili.jpg]]
 
 !!![[תומר]]:
@@ -12574,7 +12576,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170515195747350" modified="20170517235122386" tags="[[המטבח על פי ז'נבייב]]" title="חומרים">
+<div created="20170515195747350" modified="20190408153536937" tags="[[המטבח על פי ז'נבייב]] קפה" title="חומרים">
 <pre>[img[pictures/chomarim.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12630,7 +12632,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * מתבלים ומערבבים
 * שומרים במקרר בצנצנת סגורה</pre>
 </div>
-<div created="20170620145929305" modified="20170902150026050" tags="[[קופים ממונעים]]" title="חיות אוכל">
+<div created="20170620145929305" modified="20190408153602669" tags="[[קופים ממונעים]] קפה" title="חיות אוכל">
 <pre>[img[pictures/chayot-ochel.jpg]] 
 
 ''אוכל שאנחנו מכינים ברגיל:''
@@ -12877,7 +12879,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181209115549031" modified="20181209213703157" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]]" title="טל בייגלס">
+<div created="20181209115549031" modified="20190408153634639" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 !!![[תומר]]:
@@ -12886,7 +12888,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
 </div>
-<div created="20190310123955900" modified="20190323113625750" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
+<div created="20190310123955900" modified="20190408151625002" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
 <pre>[img[pictures/television.jpg]]
 
 !!![[תומר]]:
@@ -14022,14 +14024,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190307134032762" modified="20190319142040576" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה" title="לחם תושיה שינקין">
+<div created="20190307134032762" modified="20190408153726108" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 !!![[תומר]]:
 
 אם אני הולך לקניות בשעות אחר הצהריים אז זה עם [[ננו המתוקה|ננו שלי ואני]], ואנחנו חייבים לעצור [[בשינקין 53|https://easy.co.il/page/22641812]], ולקנות לחמניה רכה ומתוקה לגרגרנית הקטנה, שאוהבת את הלחמניה וגם את החיוך שמקבל את פניה. גם אני אוהב את את החיוכים הטובים, ואת הלחמים הרכים והעדינים. לרוב אני קונה לחם חמניות או את לחם הכוסמין שיבולת שועל, ואפשר גם לקחת חצי כיכר!</pre>
 </div>
-<div created="20180713195240465" modified="20190314145716789" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה" title="לחמים">
+<div created="20180713195240465" modified="20190408153744862" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
 
 !!![[תומר]]:
@@ -16894,7 +16896,20 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181102155349776" modified="20181102201349314" tags="[[כאן בגטו]] [[חיות אוכל]]" title="קפה וממתקים">
+<div created="20190408151532586" modified="20190408163053448" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]]" title="קפה">
+<pre>[img[pictures/coffee.jpg]]
+
+!!![[ז'נבייב]]:
+
+עד לא מזמן הייתי שותה בבית בבוקר לפני כל דבר אחר שני קפה ממקינטה בבית, עוד הפוך חזק מהמכונה כשמגיעה לעבודה, ואחר כך במהלך היום עוד כמה עם או בלי חלב, אך [[הגוף המתבלה|האחיות בלות]] הודיע לי שזה מופרז, וירדתי לאחד בבית ואחד בעבודה :(
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[קפה]]&quot;&gt;&gt;
+</pre>
+</div>
+<div created="20181102155349776" modified="20190408154011466" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="קפה וממתקים">
 <pre>[img[pictures/cafe-vemamtakim.jpg]]
 
 !!![[תומר]]:
@@ -16903,7 +16918,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20181018192827237" tags="HH מסעדות [[חיות אוכל]]" title="קפה מילר">
+<div created="20170119232802609" modified="20190408154027550" tags="HH מסעדות [[חיות אוכל]] קפה" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
@@ -17525,7 +17540,7 @@ Fapina''
 
 שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=krTGi51osmI]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא שי טרא ליטמן אהוב עולם.</pre>
 </div>
-<div created="20180726193443645" modified="20180802195815980" tags="[[כאן בגטו]]" title="שיח קפה">
+<div created="20180726193443645" modified="20190408154403372" tags="[[כאן בגטו]] קפה" title="שיח קפה">
 <pre>[img[pictures/siach-cafe.jpg]]
 
 !!![[תומר]]: 
