בתי קפה, ההוסטל ציור חדש

--- a/index.html
+++ b/index.html
@@ -419,6 +419,8 @@ Error message and password prompt
 
 <li>בתה וגריגה</li>
 
+<li>בתי קפה</li>
+
 <li>בתים</li>
 
 <li>ג'ו ונורמה</li>
@@ -9109,10 +9111,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190408152821476" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20190415190432578" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20190408165211001" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190415192714718" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9121,7 +9123,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לחמים [[מאנטה ריי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בתי קפה]] ההוסטל [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9141,7 +9143,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190409114118574" title="$:/temp/search">
+<div created="20161023184814872" modified="20190416155558303" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9299,12 +9301,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20190310130839062" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
+<div created="20190221150238201" modified="20190410152508594" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
 
-אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של גוף גלובלי, אליו יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
+אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליו יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
 </pre>
@@ -10329,7 +10331,7 @@ well,
 מוסיפים פנימה את צרור האספרגוס וצולים כמה דקות.
 * בוזקים מלח ים גס, מערבבים בקלות, ומגישים. (אפשר גם לאכול במהלך היום או לשמור במקרר יומיים).</pre>
 </div>
-<div created="20171216194951924" modified="20190314143931584" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20190415190142993" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -10620,7 +10622,7 @@ Is where I want to be
 
 אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.</pre>
 </div>
-<div created="20190227173320579" modified="20190408153106570" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה" title="בתה וגריגה">
+<div created="20190227173320579" modified="20190415190540068" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה [[בתי קפה]]" title="בתה וגריגה">
 <pre>[img[pictures/beta-ve-grega.jpg]]
 
 !!![[תומר]]: 
@@ -10628,6 +10630,19 @@ Is where I want to be
 [[בתה וגריגה|https://www.haaretz.co.il/gallery/night-life/bars/location-1.3446197]], זה כאילו שסבתות כל האזור התכנסו, סיכמו מי מהן תכין מה, וככה נשב בלבונטין 2, [[ננו האכלנית|ננו שלי ואני]] ואני בפינת לבונטין ואלנבי, מול [[המגדלור]], ונאכל כריך, ומלפפון חתוך עם מלח גס, וקוסקוס עם מרק, ומשקה מנטה יאמי, ובסבוסה, והפוך קטן חזק, ועוגיה, ויהיה לנו טעים, ונהנה, ונצחק, ונסיים, ונשלם ממש לא הרבה, ואני אכניס את המתוקה לעגלה, ונעלה במעלה לבונטין. כבר ערב ונחזור הביתה.
 
 
+</pre>
+</div>
+<div created="20190415190001072" modified="20190416155413504" tags="קפה [[חיות אוכל]] [[מטא בדיון]]" title="בתי קפה">
+<pre>[img[pictures/coffee-shops.jpg]]
+
+!!![[הצוות]]:
+
+בחפשנו במרשתת אחר בית קפה ממקום כלשהו שהוא לא אירופה, למעט ארצות סקנדינביה, ולא המזרח הרחוק, כי אם בית קפה באיזה שום מקום כלשהו, מצאנו את הדבר [[הזה|https://upload.wikimedia.org/wikipedia/commons/b/b6/Durkee%2C_Oregon%2C_cafe.jpg]], שנמצא [[בדורקי,אורגון|https://en.wikipedia.org/wiki/Durkee,_Oregon]]. שאלנו את עצמנו אם זה רעיון טוב לבקר שם ביום מן הימים, נראה כמו מקום קול. בינתיים גורה ציירה אותו. לזכור ולא לשכוח.
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[בתי קפה]]&quot;&gt;&gt;
 </pre>
 </div>
 <div created="20180704182012305" modified="20181018193950764" tags="" title="בתים">
@@ -11497,7 +11512,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180715194223602" modified="20190408153156080" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה" title="גרציאני">
+<div created="20180715194223602" modified="20190415191654784" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="גרציאני">
 <pre>[img[pictures/grasyani.jpg]]
 
 !!![[תומר]]:
@@ -11619,7 +11634,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על [[אלפרד]], וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20181031153935874" modified="20190408153218970" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה" title="דליקטסן">
+<div created="20181031153935874" modified="20190415191139025" tags="[[כאן בגטו]] [[חיות אוכל]] [[מטא בדיון]] מסעדות קפה [[בתי קפה]]" title="דליקטסן">
 <pre>[img[pictures/delicatessen-tel-aviv.jpg]]
 
 
@@ -11627,7 +11642,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 [[יויו]] לעולם לא היה יורד לרמה הזאת של לראות תוכניות בערוץ מסחרי, אבל שידבר איתי כשיהפוך לאבא עייף שמתבטט מול המסך הקטן באזור תשע עשר מידי ערב, וכעת הוא צופה ב- MKR, והתוודע כמו כל צופי האפיק [[לרותי ברודו|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%AA%D7%99_%D7%95%D7%9E%D7%AA%D7%99_%D7%91%D7%A8%D7%95%D7%93%D7%95]] - השופטת הכריזמטית והכנה - שאוחזת בכמה מעוזי קולינריה איתנים - וכן - גם אני לפעמים וגם הבוקר פניתי שמאלה ליהודה הלוי ועצרתי  [[בדליקטסן|https://www.delitlv.co.il/]],  וקניתי קפה ומאפה ולחם לטוסטים והמשכתי לצעוד מבסוט [[לאלנבי|קפה וממתקים]].</pre>
 </div>
-<div created="20171018115658510" modified="20190408153237005" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה" title="דליקטסן אצל ז'נבייב">
+<div created="20171018115658510" modified="20190415191152585" tags="[[המטבח על פי ז'נבייב]] ארוחות מסעדות קפה [[בתי קפה]]" title="דליקטסן אצל ז'נבייב">
 <pre>[img[pictures/delicatessen.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11838,7 +11853,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[אתמול|https://www.theguardian.com/film/2017/sep/15/harry-dean-stanton-actor-dies-paris-texas-alien-repo-man]] הלך לעולמו [[הארי דין סטנטון|http://www.imdb.com/name/nm0001765/]], שבשבילי הוא היה, יותר מכל, טראוויס, [[מפריז-טקסס|http://www.imdb.com/title/tt0087884/?ref_=nmbio_mbio]].</pre>
 </div>
-<div created="20190324091820505" modified="20190408153305263" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="הבריסטות שכאן">
+<div created="20190324091820505" modified="20190415191215836" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]]" title="הבריסטות שכאן">
 <pre>[img[pictures/barista.jpg]]
 
 !!![[תומר]]:
@@ -11899,8 +11914,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 בפעם האחרונה שביקרנו את אבא צילמתי את [[הדשא של השכן|https://www.youtube.com/watch?v=bZcY6gBZcMo]].</pre>
 </div>
-<div created="20170320180743138" modified="20180704183551600" tags="HH" title="ההוסטל">
-<pre>[img[pictures/A0kTw651K5Nv7O5O.jpg]]
+<div created="20170320180743138" modified="20190416173457100" tags="HH בתים" title="ההוסטל">
+<pre>[img[pictures/the-hostel.jpg]]
 
 !!![[גורה]]:
 
@@ -11908,7 +11923,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 המחירים בו סבירים, והוא כולל עשרה חדרים קטנים ממש, הכוללים חלל זעיר ובו המקלחון מעל האסלה.
 
-במרכז ההוסטל  &quot;סלון&quot; נחמד מלא בספות  וכורסאות ומסכי טלוויזיה ורמקולים ומטבח לקפה וחטיפים.
+במרכז ההוסטל  &quot;סלון&quot; נחמד מלא בספות  וכורסאות ומסכי טלוויזיה ורמקולים ממנו יוצא מטבח.
 
 </pre>
 </div>
@@ -12333,7 +12348,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170705183317472" modified="20190408153429273" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה" title="הספלים מהם אנו שותים">
+<div created="20170705183317472" modified="20190415192236308" tags="[[המטבח על פי ז'נבייב]] בתים [[חיות אוכל]] קפה [[בתי קפה]]" title="הספלים מהם אנו שותים">
 <pre>[img[pictures/sifley-cafe.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12400,7 +12415,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181107090226210" modified="20190408153459149" tags="[[כאן בגטו]] [[חיות אוכל]] קפה" title="הקיוסק של גילי">
+<div created="20181107090226210" modified="20190415191334967" tags="[[כאן בגטו]] [[חיות אוכל]] קפה [[בתי קפה]]" title="הקיוסק של גילי">
 <pre>[img[pictures/gili.jpg]]
 
 !!![[תומר]]:
@@ -12879,7 +12894,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181209115549031" modified="20190408153634639" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה" title="טל בייגלס">
+<div created="20181209115549031" modified="20190415191538681" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="טל בייגלס">
 <pre>[img[pictures/tal-bagels.jpg]]
 
 !!![[תומר]]:
@@ -14024,14 +14039,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190307134032762" modified="20190408153726108" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
+<div created="20190307134032762" modified="20190415192025847" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 !!![[תומר]]:
 
 אם אני הולך לקניות בשעות אחר הצהריים אז זה עם [[ננו המתוקה|ננו שלי ואני]], ואנחנו חייבים לעצור [[בשינקין 53|https://easy.co.il/page/22641812]], ולקנות לחמניה רכה ומתוקה לגרגרנית הקטנה, שאוהבת את הלחמניה וגם את החיוך שמקבל את פניה. גם אני אוהב את את החיוכים הטובים, ואת הלחמים הרכים והעדינים. לרוב אני קונה לחם חמניות או את לחם הכוסמין שיבולת שועל, ואפשר גם לקחת חצי כיכר!</pre>
 </div>
-<div created="20180713195240465" modified="20190408153744862" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה" title="לחמים">
+<div created="20180713195240465" modified="20190415190425163" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]]" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
 
 !!![[תומר]]:
@@ -16896,7 +16911,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20190408151532586" modified="20190408163053448" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]]" title="קפה">
+<div created="20190408151532586" modified="20190415192217452" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] [[בתי קפה]]" title="קפה">
 <pre>[img[pictures/coffee.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16918,7 +16933,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20190408154027550" tags="HH מסעדות [[חיות אוכל]] קפה" title="קפה מילר">
+<div created="20170119232802609" modified="20190415192505565" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
@@ -17001,7 +17016,7 @@ Fapina''
 
 ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.</pre>
 </div>
-<div created="20170822191101898" modified="20181018173611314" tags="[[המטבח על פי ז'נבייב]]" title="רביזיה במטבח">
+<div created="20170822191101898" modified="20190415192625979" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] מסעדות" title="רביזיה במטבח">
 <pre>[img[pictures/revisia-bamitbach.jpg]]
 
 !!![[ז'נבייב]]:
@@ -17540,7 +17555,7 @@ Fapina''
 
 שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=krTGi51osmI]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא שי טרא ליטמן אהוב עולם.</pre>
 </div>
-<div created="20180726193443645" modified="20190408154403372" tags="[[כאן בגטו]] קפה" title="שיח קפה">
+<div created="20180726193443645" modified="20190415192648960" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="שיח קפה">
 <pre>[img[pictures/siach-cafe.jpg]]
 
 !!![[תומר]]: 
