פת הגטו, קובה טבעונית

--- a/index.html
+++ b/index.html
@@ -963,6 +963,8 @@ Error message and password prompt
 
 <li>מפעיל יד</li>
 
+<li>מפת הגטו</li>
+
 <li>מצפה ראשית</li>
 
 <li>מקלדת</li>
@@ -1158,6 +1160,8 @@ Error message and password prompt
 <li>צלי בשר עם תפוחי אדמה</li>
 
 <li>קואנג</li>
+
+<li>קובה טבעוני</li>
 
 <li>קוסקוס</li>
 
@@ -9111,10 +9115,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190415190432578" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20190422140901510" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190415192714718" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190422142823717" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9123,7 +9127,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בתי קפה]] ההוסטל [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קובה טבעוני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9143,7 +9147,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190416155558303" title="$:/temp/search">
+<div created="20161023184814872" modified="20190422142407837" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9301,12 +9305,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20190410152508594" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
+<div created="20190221150238201" modified="20190418225741896" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
 
-אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליו יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
+אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את הקמת קהילת [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של [[גוף גלובלי|imagine]], אליה יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
 </pre>
@@ -14709,6 +14713,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
 </div>
+<div created="20190418113727292" modified="20190422155351163" tags="[[כאן בגטו]]" title="מפת הגטו">
+<pre>[img[pictures/ghettos-map.jpg]]
+
+!!![[תומר]]:
+
+אלה פחות או יותר תחומי הגטו מבחינתי, אשר לגבולותיו [[גמישות|blue-marble-hood]] חוצה [[גבולות|imagine]].
+</pre>
+</div>
 <div created="20170501184958435" modified="20180704184224701" tags="HH בתים" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
@@ -16773,6 +16785,77 @@ Fapina''
 
 הוא למד עיצוב תעשייתי, ויש לו [[חלל עבודה|הסדנה של קואנג]] ברובע ה-13.
 הוא תמיד העדיף להתפרנס מהעבודה בשיפוצים עם [[חבריו|הסינים]], ובזמן האחרון אלפרד והוא [[משפצים ובונים רהיטים]] במלוא האון.
+</pre>
+</div>
+<div created="20190422120310153" modified="20190422170803785" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="קובה טבעוני">
+<pre>[img[pictures/veg-cube.jpg]]
+
+!!![[הצוות]]:
+
+
+לבצק: (כ-12 כדורים)
+
+*כוס וחצי קמח סולת
+*2 כפות שמן
+*3/4 כוס מים
+
+למלית:
+
+*בצל קצוץ
+*גזר מגורר
+*2-3 סלסלות של פטריות מכל סוג שתרצו ורצוי מכמה סוגים, חתוכות לקוביות קטנות
+* חופן צנוברים
+
+לרוטב:
+
+*שתי שיני שום פרוסות
+*שלושה מקלות סלרי פרוסים
+*שתי בטטות בינוניות חתוכות לקוביות
+*חמש עגבניות קטנות חתוכות לקוביות
+*קופסת עגבניות קלופות 
+*כוס גרגירי חומוס מבושלים במים או מהסוגים הקפואים
+*כפית תבלין קארי אדום
+*רבע כפית קינמון
+*רבע כפית חוואייג' לקפה או בהרט
+*מלח ים גס
+*פלפל שחור
+*קורט סוכר
+*ג'ינג'ר מגורר
+*2 ליטרים מים
+
+אופן ההכנה:
+
+1. מערבבים את חומרי הבצק עד לכדור חלק ואחיד ומניחים בקערה עטופה במקרר
+
+2. למלית - במחבת גדולה מחממים 3-4 כפות שמן זית וצולים בהם לפי הסדר את הבצל, הגזר, הפטריות והצנוברים- בכל שלב לתת לפריט להזהיב יפה, וכשמוכן מניחים בצד.
+
+3. לרוטב - בסיר בינוני-גדול מחממים 3--4 כפות שמן זית ומתחילים להזהיב לפי הסדר את השום, הסלרי, והבטטות
+
+4. כשהבטטות זהובות מוסיפים אליהן את התבלינים ומטגנים אותן דקה-שתיים נוספות.
+
+5. מוסיפים את העגבניות וצולים אותן עוד 15 דקות בערך
+
+6.מוסיפים את גרגירי החומוס והמים
+
+7. נותנים לרוטב לרתוח, מנמיכים את הלהבה ומבשלים 20-30 דקות (טועמים ואם צריך מתקנים)
+
+8. בזמן שהרוטב מתבשל מוציאים את בצק הסולת מהמקרר ויוצרים עם ידיים רטובות כ-12 כדורי בצק. מחזירים למקרר ל-10-15 דקות נוספות
+
+9. לאחר שהבצק התקרר, ממלאים אותו במלית הפטריות: 
+
+*משטחים את הבצק לעיגול בקוטר של 8 סנטימטרים בערך
+
+* קורצים מהמילוי כמות של בערך כפית וחצי ומאחדים אותה לכדור, אותו מניחים במרכז עיגול הבצק, סוגרים את קצוותיו ומאחדים אותם לסגירה אחת, מגלגלים מעט ובודקים שהכדור סגור כמו שצריך
+
+*מקררים את הקובות הלא מבושלות עד שהרוטב מוכן
+
+10. כשהרוטב מוכן, מניחים בעדינות את כדורי הקובה בתוכו, ומבשלים על להבה נמוכה כשעה.
+
+* טעים מאד על [[קוסקוס]] או [[אורז|אורז לבן עם צנוברים]]
+
+
+
+
 </pre>
 </div>
 <div created="20170415002104316" modified="20180605133917349" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="קוסקוס">
