--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,8 @@ Error message and password prompt
 
 <li>נולדנו</li>
 
+<li>נחמה וחצי</li>
+
 <li>נטע</li>
 
 <li>ננו שלי ואני</li>
@@ -9127,7 +9129,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קובה טבעוני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[נחמה וחצי]] [[קפה מילר]] [[מוכרת הדיסקים/dj]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9147,8 +9149,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190422142407837" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20190426150204371" title="$:/temp/search">
+<pre> </pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -14713,7 +14715,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 באין מפעיל יד אפשר להעזר [[בגלי קול|https://www.youtube.com/watch?v=JEq10L7u3SM]].</pre>
 </div>
-<div created="20190418113727292" modified="20190422155351163" tags="[[כאן בגטו]]" title="מפת הגטו">
+<div created="20190418113727292" modified="20190424150310272" tags="[[כאן בגטו]]" title="מפת הגטו">
 <pre>[img[pictures/ghettos-map.jpg]]
 
 !!![[תומר]]:
@@ -14980,6 +14982,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[נולדנו|https://www.youtube.com/watch?v=Or-dVWZzS7Q]] כולנו [[כאן|גלות]] בין 1955 ל-2000.
 ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. פיליפ הוא המבוגר ביותר וראשל היא בתנו הקטנה.</pre>
+</div>
+<div created="20190423072741286" modified="20190426151742958" tags="[[כאן בגטו]] [[בתי קפה]] [[סיפורים אמיתיים]]" title="נחמה וחצי">
+<pre>[img[pictures/nechama-vahetzi.jpg]]
+
+!!![[תומר]]:
+
+בשנים שחייתי עם [[שפי|ננו שלי ואני]], היא הכריזה יום אחד, [[שנחמה וחצי|https://nechama-vahetzi.co.il/]] זה המקום שלה, וביקשה שאוותר. כמה שנים לא נכנסתי לנחמה, שניצבת בהוד והדר כאן בגטו, על אחד העם, ככר הבימה, שדרות בן-ציון, תרס&quot;ט ורוטשילד. אני מתגעגע, אבל עדיין מתח קל חולף בי כאני עובר ליד, ובטח בקרוב יהיה בסדר.
+
+</pre>
 </div>
 <div created="20171219203307613" modified="20171226151035506" tags="[[סיפורים אמיתיים]]" title="נטע">
 <pre>[img[pictures/neta.jpg]]
@@ -16787,7 +16798,7 @@ Fapina''
 הוא תמיד העדיף להתפרנס מהעבודה בשיפוצים עם [[חבריו|הסינים]], ובזמן האחרון אלפרד והוא [[משפצים ובונים רהיטים]] במלוא האון.
 </pre>
 </div>
-<div created="20190422120310153" modified="20190422170803785" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="קובה טבעוני">
+<div created="20190422120310153" modified="20190424141120699" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="קובה טבעוני">
 <pre>[img[pictures/veg-cube.jpg]]
 
 !!![[הצוות]]:
@@ -16797,7 +16808,7 @@ Fapina''
 
 *כוס וחצי קמח סולת
 *2 כפות שמן
-*3/4 כוס מים
+*1/2-3/4 כוס מים
 
 למלית:
 
@@ -16825,7 +16836,7 @@ Fapina''
 
 אופן ההכנה:
 
-1. מערבבים את חומרי הבצק עד לכדור חלק ואחיד ומניחים בקערה עטופה במקרר
+1. מערבבים את חומרי הבצק עד לכדור חלק ואחיד ומניחים בקערה עטופה במקרר - לגבי המים - בהתחלה מוסיפים לקמח הסולת והשמן חצי כוס מים ולשים עד לבצק חלק. אם הוא יבש מידי מוסיפים עוד כף או שתיים ובודקים.
 
 2. למלית - במחבת גדולה מחממים 3-4 כפות שמן זית וצולים בהם לפי הסדר את הבצל, הגזר, הפטריות והצנוברים- בכל שלב לתת לפריט להזהיב יפה, וכשמוכן מניחים בצד.
 
@@ -16858,7 +16869,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170415002104316" modified="20180605133917349" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="קוסקוס">
+<div created="20170415002104316" modified="20190423062056643" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="קוסקוס">
 <pre>[img[pictures/coucous.jpg]]
 
 
@@ -16871,7 +16882,7 @@ Fapina''
 חומרים לקוסקוס:
 
 * ק&quot;ג סולת
-* שתיין וחצי כוסות מים
+* שתיים וחצי כוסות מים
 * רבע כוס שמן קנולה
 ָ כף מלח
 
@@ -17343,7 +17354,7 @@ Fapina''
 
 בחורף הגשום למדי, על האדמה הסלעית, מתחת לעצי האלון הגדולים, בין עלים יבשים, בלוטים, ספלולים, מקלות בגדלים שונים - [[צומחות לפלא רקפות נחמדות מאד|https://www.youtube.com/watch?v=jSyIEPBUsZo]].</pre>
 </div>
-<div created="20161213210419446" modified="20170608155740191" tags="[[אחות כהן]]" title="שאלון האחיות">
+<div created="20161213210419446" modified="20190425093238429" tags="[[אחות כהן]]" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
 
 !!![[גורה]]:
@@ -17385,8 +17396,8 @@ Fapina''
 # האם את שומעת מוסיקה כשאת לבד?
 # האם את הוגה חיבה יתרה לנשים עם שפם?
 # האם את לפעמים חשה חשק עז לקנות דיסק ואז אף הולכת וקונה אותו?
-# האם את קונה מוזיקה ממוזיקאים (למשל בנד קאמפ)?
-# האם את קונה מוזיקה מאנשים עם עניבות (למשל איי טיונז)?
+# האם את קונה מוזיקה ממוזיקאים ?
+# האם את קונה מוזיקה מאנשים עם עניבות ?
 # האם את קוראת ספרים?
 # לכמה מהדורות חדשות את מאזינה מידי יום?
 # האם את מחבבת את משה נוסבאום?
