--- a/index.html
+++ b/index.html
@@ -9129,7 +9129,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[נחמה וחצי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14983,12 +14983,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[נולדנו|https://www.youtube.com/watch?v=Or-dVWZzS7Q]] כולנו [[כאן|גלות]] בין 1955 ל-2000.
 ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. פיליפ הוא המבוגר ביותר וראשל היא בתנו הקטנה.</pre>
 </div>
-<div created="20190423072741286" modified="20190426151742958" tags="[[כאן בגטו]] [[בתי קפה]] [[סיפורים אמיתיים]]" title="נחמה וחצי">
+<div created="20190423072741286" modified="20190428045402093" tags="[[כאן בגטו]] [[בתי קפה]] [[סיפורים אמיתיים]]" title="נחמה וחצי">
 <pre>[img[pictures/nechama-vahetzi.jpg]]
 
 !!![[תומר]]:
 
-בשנים שחייתי עם [[שפי|ננו שלי ואני]], היא הכריזה יום אחד, [[שנחמה וחצי|https://nechama-vahetzi.co.il/]] זה המקום שלה, וביקשה שאוותר. כמה שנים לא נכנסתי לנחמה, שניצבת בהוד והדר כאן בגטו, על אחד העם, ככר הבימה, שדרות בן-ציון, תרס&quot;ט ורוטשילד. אני מתגעגע, אבל עדיין מתח קל חולף בי כאני עובר ליד, ובטח בקרוב יהיה בסדר.
+בשנים שחייתי עם [[שפי|ננו שלי ואני]], היא הכריזה יום אחד, [[שנחמה וחצי|https://nechama-vahetzi.co.il/]] זה המקום שלה, וביקשה שאוותר, ואכן כמה שנים לא נכנסתי לנחמה היקרה, שניצבת בהוד והדר כאן בגטו, על אחד העם, ככר הבימה, שדרות בן-ציון, תרס&quot;ט ורוטשילד, ועכשיו חוזר.
 
 </pre>
 </div>
