--- a/index.html
+++ b/index.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>אוטו מטריה</li>
 
+<li>אופטיקה בליסימה</li>
+
 <li>אורז לבן עם צנוברים</li>
 
 <li>אחוזת דאונטון</li>
@@ -724,8 +726,6 @@ Error message and password prompt
 <li>ים טתיס</li>
 
 <li>יסודי או ocd</li>
-
-<li>יצנח לו טיפולתי</li>
 
 <li>ירקות קלויים</li>
 
@@ -9129,7 +9129,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[נחמה וחצי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אופטיקה בליסימה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9149,7 +9149,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190427160033349" title="$:/temp/search">
+<div created="20161023184814872" modified="20190506083617144" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9953,6 +9953,15 @@ well,
 בילדותי, המרחק מבית הורי לבית הספר היסודי, היה משהו כמו 400 מטרים, הכוללים שלוש פניות.
 
 בקיץ זו לא הייתה בעיה, וגם היו לי אופניים, אבל בחורף תמיד [[חלמתי|דעתניות]] שיש לי אוטו-תלת אופן, עם כיסוי בצורת מטריה ענקית שקופה.
+</pre>
+</div>
+<div created="20190506090411968" modified="20190506093453754" tags="[[כאן בגטו]]" title="אופטיקה בליסימה">
+<pre>[img[pictures/belisima.jpg]]
+
+!!![[תומר]]:
+
+בקרליבך 39, מול הסינמטק, סמוך לפינה של קריית ספר, שוכנת בצנעה [[אופטיקה בליסימה|https://www.belisima.co.il/]], חנות משקפיים מצויינת עם המוכרות הכי נחמדות.
+
 </pre>
 </div>
 <div created="20170402173414658" modified="20180605132906797" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="אורז לבן עם צנוברים">
@@ -13059,15 +13068,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[יויו]]:
 
 לפעמים אני שואל את עצמי, האם יש לך [[פלס|https://he.wikipedia.org/wiki/%D7%A4%D7%9C%D7%A1_%D7%91%D7%A0%D7%90%D7%99%D7%9D]] במקום של [[העין השלישית|https://he.wikipedia.org/wiki/%D7%94%D7%A2%D7%99%D7%9F_%D7%94%D7%A9%D7%9C%D7%99%D7%A9%D7%99%D7%AA]] או שזו [[הפרעה כפייתית טורדנית?|https://he.wikipedia.org/wiki/%D7%94%D7%A4%D7%A8%D7%A2%D7%94_%D7%98%D7%95%D7%A8%D7%93%D7%A0%D7%99%D7%AA-%D7%9B%D7%A4%D7%99%D7%99%D7%AA%D7%99%D7%AA]] זה לא רק שאני צריך ליישר כל דבר כל הזמן, ושהדברים יהיו בזווית שאני רוצה. אני כמעט כל הזמן מתכנן, אני כמעט כל הזמן [[מזנפלץ|מיזונפלציה]], אני מוטרד מדברים שאמרתי או לא אמרתי. קו דק עובר בין פרפקציוניזם ל-ocd, ולאחרונה גיליתי שיש דבר כזה שנקרא legit ocd ומה רבה שמחתי.</pre>
-</div>
-<div created="20190319161807133" modified="20190408120612318" tags="[[כאן בגטו]]" title="יצנח לו טיפולתי">
-<pre>[img[pictures/tipulati.jpg]]
-
-!!![[תומר]]:
-
-כן, מסתבר שככה קוראים [[ליצור הזה|https://he.wikipedia.org/wiki/%D7%98%D7%99%D7%A4%D7%95%D7%9C%D7%AA%D7%99%D7%99%D7%9D]], שהוא בעצם זבוב, שמרפרף לך בבית באיטיות מקרטעת, כאילו כל משק כנפיים מפעיל את המשק הבא. לפעמים הוא נח על ארון או על קיר, עד שלבסוף הוא יצנח אל מותו, ואני אמצא אותו בבוקר על הרצפה בדרך לחדר של [[ננו הקטנה|ננו שלי ואני]], לא סגור על עצמי אם כבר אפשר להכריז על מותו, להרים אותו עם מפית ולקבור אותו בפח האשפה, ובראשי יחלוף המשפט: // האביב כבר כאן//.
-
-</pre>
 </div>
 <div created="20170422205250692" modified="20180605132756716" tags="[[המטבח על פי ז'נבייב]] [[מתכונים טבעוניים]] מתכונים" title="ירקות קלויים">
 <pre>[img[pictures/yerakot-klooim.jpg]]
